PostIt.Backend/Kubernetes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        nginx.ingress.kubernetes.io/enable-cors: "true"
        nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - postit.local.dev
          secretName: tls-secret
    rules:
        - host: postit.local.dev
          http:
              paths:
                  - path: /api/users
                    pathType: Prefix
                    backend:
                        service:
                            name: postit-users-clusterip-srv
                            port:
                                number: 80
                  - path: /api/account
                    pathType: Prefix
                    backend:
                        service:
                            name: postit-users-clusterip-srv
                            port:
                                number: 80
                  - path: /api/posts
                    pathType: Prefix
                    backend:
                        service:
                            name: postit-posts-clusterip-srv
                            port:
                                number: 80
                  - path: /api/comments
                    pathType: Prefix
                    backend:
                        service:
                            name: postit-posts-clusterip-srv
                            port:
                                number: 80
                  - path: /api/likes
                    pathType: Prefix
                    backend:
                        service:
                            name: postit-posts-clusterip-srv
                            port:
                                number: 80
